# langgraph-agentic-scaffold

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE-agents-portable.md  CONTRIBUTING.md  Dockerfile  FILE_ATTACHMENT_INVESTIGATION.md  HISTORY_30HR.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL_DEBT.md  config.yaml  config.yaml.example  docker-compose.yml  log_config.yaml  main.py  open-swe  promptfoo_tool_tests.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  router_tests_bfcl.jsonl  router_tests_inspect.json  run.bat  run.sh  start.sh  temp_gemini_test.py  tool_competence_tests_results.json  user_settings.yaml.example  windows_run.bat
.claude/: CLAUDE.md  MEMORY.md  settings.json
.claude/hooks/: post-commit-smoke.sh
.github/instructions/: core_details.instructions.md
.graphs/: intent-engineering-briefing.md
app/: .env.example  api.py  pytest.ini  run.sh  windows_run.bat
app/docs/: DEVELOPERS_GUIDE.md  MANIFEST_01_Consolidate_Codebase.json  MANIFEST_Add_Tests.json  MANIFEST_Consolidate_Codebase.json  MANIFEST_Full_LM_Studio_Integration.json  MANIFEST_Singleton_LLM_Client.json  MANIFEST_proper_logging.md  PROPOSAL_ Schema-Enforced LLM Output Contracts.md  PROPOSAL_Architectural_Framework_for_Asynchronous_Task_Processing.md  PROPOSAL_Enable_Agentic_Loops.md  PROPOSAL_Implement_Testing_Framework.md  PROPOSAL_Integrate_Observability_Platform.md  PROPOSAL_Refactor_Singleton_LLM_Client.md  PROPOSAL_Transition_to_Tool_Based_Architecture copy.md  PROPOSAL_enums_refactor.json  PROPOSAL_provider_failover_mechanism.md  TODO.md  TODO_01_Consolidate_Codebase.md  TODO_03_Singleton_LLM_Client.md  TODO_[03]_Enable_Graph_Loops.md  TODO_[03]_full_lm_studio.md  nested-loops-architecture.html
app/prompts/: batch_processor_prompt.md  chat_prompt.md  code_writer_prompt.md  critic_prompt.md  critic_wrapper_prompt.md  data_extractor_prompt.md  data_extractor_prompt.md.example  data_extractor_prompt.txt.example  data_extractor_specialist_prompt.md.example  data_processor_specialist_prompt.md.example  default_responder_prompt.md  distillation_collector_prompt.md  distillation_expander_prompt.md  exit_interview_feedback.md  exit_interview_prompt.md  file_operations_prompt.md  file_specialist_prompt.md  file_specialist_prompt.md.example  file_specialist_tool_prompt.md.example  hello_world_prompt txt.example  image_specialist_prompt.md  navigator_browser_specialist_prompt.md  navigator_specialist_prompt.md  open_interpreter_prompt.md  progenitor_alpha_prompt.md  progenitor_bravo_prompt.md  project_director_prompt.md  prompt_specialist_prompt.md  prompt_specialist_prompt.md.example  prompt_triage_prompt.md  research_orchestrator_prompt.md  researcher_prompt.md  response_synthesizer_prompt.md  router_prompt.md  router_prompt.md.example  router_specialist_prompt.md.example  sentiment_classifier_prompt.md  sentiment_classifier_prompt.md.example  summarizer_prompt.md  synthesizer_prompt.md  (+6 more)
app/src/: .gitignore  api.py  cli.py  enums.py  main.py
app/tests/: __init__.py  conftest.py  pytest--collect-only-q.md
app/web-ui/: TEST_README.md  package.json  server.js
config/: mcp_registry.yaml
docker/templates/: node-mcp.Dockerfile
docker/terminal-mcp/: Dockerfile  terminal_mcp_server.py
docs/: ADR-TRIAGE-RECOMMENDATIONS.md  ADRs  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  CREATING_A_NEW_AGENT_TYPE.md  CREATING_A_NEW_SPECIALIST.md  DEVELOPERS_GUIDE.md  EMERGENT_PROJECT_SUBGRAPH.md  FLOWS.md  GRAPH_CONSTRUCTION_GUIDE.md  GRAPH_VISUALIZATIONS.md  INTEGRATION_TEST_GUIDE.md  MCP_GUIDE.md  PROJECT_STRUCTURE.md  RELEASE_PREP.md  RESEARCH.md  SAMPLE_ARCHIVER_OUTPUT.md  SESSION_NOTES_2025-12-30.md  TEST_SUITE_SUMMARY.md  TRAINING_DATA_CAPTURE.md  UX_UI & API Mockup Guide.md  UX_UI_GUIDE.md  WEB_UI.md  combo updates.md  comfyui-integration.html  working_prompts.md
docs/ADR/: ADR-004_ Specialist-Driven Conditional Routing.md  ADR-TS-001_ Architectural Remediation Plan for the Unit Test Suite.md  BUGFIX_CORE-CHAT-002_State_Management.md  ROADMAP_Project_Bedrock_v3.1 A Roadmap for a Resilient, Modular, and Interoperable Reasoning Architecture.md  ROADMAP_Project_Bedrock_v3.md  test_code_writer_specialist.py
docs/ADRs/: AGENTIC_COGNATES.md
docs/PLANS/: 01_DEEP_RESEARCH_IMPLEMENTATION_PLAN.md  02_DEEP_RESEARCH_FALSIFICATION.md  03_DEEP_RESEARCH_DIALECTIC.md  04_DEEP_RESEARCH_HITL_INTEGRATION.md  DEEP_RESEARCH_PHASE_1_EXECUTION.md  DEEP_RESEARCH_RISK_ASSESSMENT.md  DESIGN_EXPLORATION_Fara_UI_Improvement.md  EXECUTION_PLAN_RECESS_MIGRATION.md  RECESS  RISK_ASSESSMENT_RECESS_MIGRATION.md  cathedral-and-codex  heap_test_plan.md
docs/adr/: API_UI_PLAN.md  MANIFEST.json  MANIFEST_Enable_Graph_Loops.json  PROPOSAL.md  PROPOSALS_COMPENDIUM.md  PROPOSAL_ Agentic Final Exam Control Center UI Implementation.md  PROPOSAL_ Curator Specialist.md  PROPOSAL_ Implementing a Parallel _Scatter-Gather_ Workflow.md:Zone.Identifier  PROPOSAL_ Research QuixiAI_agi-memory.md  PROPOSAL_ Thoughts on Routing by Deep Think.md:Zone.Identifier  PROPOSAL_ Upgrade FileSpecialist with Hierarchical Reasoning Model (HRM).md  PROPOSAL_ Upgrade the RouterSpecialist with an HRM.md  PROPOSAL_Archiver_Specialist_Design.md  PROPOSAL_tensorrt-llm.md  TODO_refactor_to_add_open_interpreter_and_future_proof.md
docs/archive/: DEVELOPERS_GUIDE.md  HAPPY_PATHS.md  MCP_GUIDE_old.md  NAVIGATION_MCP_CONSUMER_REPORT.md  OBSERVABILITY.md  PROMPT_RESILIENCE_PATTERNS.md  UX_UI_GUIDE.md
external_agents/: .gitkeep
proxy/: Dockerfile  squid.conf  squid.conf.example
scripts/: .sh  add_mcp_service.py  analyze_archive.py  analyze_delegate_trees.py  backup.sh  cli.bat  cli.sh  count_tokens.py  docker-offline.sh  extract_bfcl_from_archives.py  fix-docker-local.sh  install.bat  install.sh  qa_agentic_fix_prompt.md  run.sh  run_categories_test.sh  server.bat  server.py  server.sh  setup.ps1  setup.sh  smoke_test.sh  smoke_test_mcp.py  summarize_tests.py  sync-reqs.bat  sync-reqs.sh  test_prompt.txt  verify.ps1  verify.sh  verify_ui.sh
tests/: TRACE_READING_GUIDE.md
web-ui/: package.json  server.js
(+456 files in other folders)
