[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agentic-scaffold"
version = "1.0.0"
description = "A foundational scaffold for building multi-agent systems using LangGraph, featuring a modular 'specialist' architecture."
readme = "README.md"
authors = [{ name = "Shane V Cantwell", email = "shane@example.com" }] # Replace with a real email if desired
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# These are the core dependencies required to run the application
# This section is the single source of truth for dependencies.
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "pydantic",
    "langchain-core>=0.1.52",
    "langchain>=0.1.20",
    "langgraph>=0.0.48",
    "langchain-openai>=0.1.6",
    "python-dotenv",
    "PyYAML",
    "google-generativeai",
    "tenacity",
    "inflection",
    # Add specific LLM provider packages here as needed
    # e.g., "langchain-google-genai", "langchain-openai", "langchain-community"
]

[project.urls]
"Homepage" = "https://github.com/shanevcantwell/langgraph-agentic-scaffold"
"Bug Tracker" = "https://github.com/shanevcantwell/langgraph-agentic-scaffold/issues"

# These are dependencies only needed for development (e.g., running tests)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black", # A popular code formatter
    "ruff",  # A fast linter
    "pip-tools", # For compiling requirements.txt from pyproject.toml
    "typer[all]", # For the command-line interface
    "requests",   # For making HTTP requests from the CLI to the API
]

[tool.setuptools.packages.find]
# Automatically find all packages under the 'app' directory
where = ["app"]

[tool.pytest.ini_options]
pythonpath = [
    "app"
]
markers = [
    "live_llm: marks tests that require a live LLM connection and API keys"
]